<resources>
    <string name="app_name">My Nanodegree Adventure</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My App Portfolio!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">Xyz Reader</string>
    <string name="my_own_app">Capstone: My Own App</string>
</resources>
