<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.sebariskode.mynanodegreeadventure.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/app_title"
        android:textSize="32sp"
        />

    <LinearLayout
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@color/buttonOrange"
            android:text="@string/spotify_streamer"
            />

        <Button
            android:id="@+id/scores_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/buttonOrange"
            android:text="@string/scores_app"
            />

        <Button
            android:id="@+id/library_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/buttonOrange"
            android:text="@string/library_app"
            />

        <Button
            android:id="@+id/build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/buttonOrange"
            android:text="@string/build_it_bigger"
            />

        <Button
            android:id="@+id/xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/buttonOrange"
            android:text="@string/xyz_reader"
            />

        <Button
            android:id="@+id/capstone_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/capstoneRed"
            android:text="@string/my_own_app"
            android:textColor="@android:color/white"
            />

    </LinearLayout>
</RelativeLayout>
